--- a/Task 1/sass.css
+++ b/Task 1/sass.css
@@ -10,10 +10,9 @@
 body {
   background-color: #e9e9e9;
   overflow-x: hidden;
+  line-height: 1.5;
   /* Font styles for h1 and h2 elements */
   /* Font styles for p and h3 elements */
-  /* Specific style for h1 elements */
-  /* Specific style for h2 elements */
 }
 body h1,
 body h2 {
@@ -23,16 +22,9 @@ body p,
 body h3 {
   font-family: "Josefin Sans", serif;
   font-size: 16px;
-  line-height: 1.5;
-}
-body h1 {
-  font-size: 96px;
-}
-body h2 {
-  font-size: 70px;
 }
 
-/* Styling for the header */
+/* Font styles for Header */
 header {
   background-color: #e9e9e9;
   display: flex;
@@ -42,18 +34,16 @@ header {
   /* Style for the img element within the header */
 }
 header img {
-  max-width: 100%;
   height: auto;
   width: 200px;
   margin-top: 20px;
 }
 
-/* Styling for the navigation bar */
+/* Font styles for Navigation Bar */
 .navbar {
   width: 100vw;
   display: flex;
   justify-content: center;
-  padding: 10px;
   /* Styling for the unordered list within the navigation bar */
   /* Styling for the list items within the unordered list */
   /* Styling for the anchor tags within the list items */
@@ -75,7 +65,6 @@ header img {
 }
 .navbar a:hover {
   background-color: white;
-  padding: 16px;
 }
 
 /* Styling for the main content area */
@@ -92,18 +81,24 @@ main .topsection {
   padding: 50px;
   /* Styling for the paragraph elements within the top section */
 }
+main .topsection h1 {
+  font-size: 92px;
+}
 main .topsection .subheader p {
   /* Specific style for the subheader within top section content */
   font-family: "Josefin Sans", serif;
-  font-size: 3em;
+  font-size: 64px;
 }
 main .topsection p {
   font-size: 32px;
 }
 main .columncontent {
-  padding: 0px 50px;
+  margin: auto 50px;
   -moz-column-count: 3;
        column-count: 3;
+}
+main .columncontent h2 {
+  font-size: 48px;
 }
 main .gridimages {
   display: grid;
@@ -123,10 +118,9 @@ main .gridimages img:nth-child(1) {
 
 /* Styling for the author section */
 .author {
-  padding: 50px;
+  margin: 50px;
   display: flex;
   flex-direction: row;
-  border: 1px solid black;
   justify-content: center;
   align-items: center;
   gap: 50px;
@@ -135,12 +129,12 @@ main .gridimages img:nth-child(1) {
   /* Styling for the img elements within the author section */
 }
 .author h2 {
+  font-size: 48px;
   text-align: center;
 }
 .author p {
   margin-top: 20px;
   text-align: left;
-  margin: 0;
 }
 .author img {
   border-radius: 50%;
@@ -151,41 +145,51 @@ main .gridimages img:nth-child(1) {
 .footer {
   background-color: #14181d;
   color: white;
-  padding: 20px;
+  padding: 50px;
   text-align: center;
-  margin-top: auto;
 }
 
-/* Media query for screen widths of 1024px and below */
-@media screen and (width <= 1025px) {
+@media screen and (width <= 1024px) {
+  /* Adjustments for the body */
+  body {
+    line-height: 1.5;
+  }
   /* Adjustments for the header image */
   header img {
     width: 80px;
   }
   /* Adjustments for the navigation bar */
   .navbar {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    margin-bottom: -30px;
+    /* Styling for the unordered list within the navigation bar */
+    /* Styling for the list items within the unordered list */
+    /* Styling for the anchor tags within the list items */
+  }
+  .navbar ul {
+    margin: 30px auto;
+  }
+  .navbar li {
+    display: inline;
+    margin: 0px 30px;
+  }
+  .navbar a {
+    padding: 30px 30px;
   }
   /* Adjustments for the main content area */
   main {
-    margin: 30px auto;
-    width: 85%;
-    background-color: white;
-    border: 2px solid black;
+    margin: 0 auto;
+    width: calc(100% - 120px);
+    padding: 0px;
     /* Adjustments for the top section within the main content area */
     /* Adjustments for the column content within the main content area */
     /* Adjustments for the grid images within the main content area */
     /* Adjustments for the author section */
+    /* Styling for the footer */
   }
   main .topsection {
-    padding: 0px 30px;
-    margin-top: 30px;
+    margin: auto 30px;
+    padding: 0;
   }
-  main .topsection h1,
-  main .topsection h2 {
+  main .topsection h1 {
     text-align: center;
   }
   main .topsection p {
@@ -193,12 +197,13 @@ main .gridimages img:nth-child(1) {
   }
   main .topsection .subheader p {
     text-align: center;
+    margin-bottom: 30px;
   }
   main .columncontent {
-    padding: 0px 30px;
     -moz-column-count: auto;
          column-count: auto;
     margin-bottom: 30px;
+    margin: auto 30px;
   }
   main .columncontent h2 {
     margin: 30px auto;
@@ -207,10 +212,10 @@ main .gridimages img:nth-child(1) {
   main .gridimages {
     display: grid;
     justify-content: center;
+    margin-top: 30px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "top-left top-right" "bottom-left bottom-right";
-    margin-top: 30px;
     /* Adjustments for the img elements within the grid images */
     /* Specific adjustments for the first img element within the grid images */
     /* Specific adjustments for the second img element within the grid images */
@@ -238,8 +243,7 @@ main .gridimages img:nth-child(1) {
     display: none;
   }
   main .author {
-    padding: 30px;
-    gap: 30px;
+    margin: 30px;
   }
   main .author h2 {
     text-align: left;
@@ -248,99 +252,64 @@ main .gridimages img:nth-child(1) {
     margin-top: 30px;
     text-align: left;
   }
-  main .author img {
-    width: 200px;
+  main .footer {
+    padding: 30px;
   }
 }
-/* Media query for screen widths of 720px and below */
 @media screen and (width <= 720px) {
-  /* Adjustments for the header image */
-  header img {
-    width: 80px;
-  }
   /* Adjustments for the navigation bar */
   .navbar {
-    width: 100vw;
-    padding: 20px;
+    /* Styling for the unordered list within the navigation bar */
+    /* Styling for the list items within the unordered list */
+    /* Styling for the anchor tags within the list items */
+  }
+  .navbar ul {
+    margin: 20px auto;
+  }
+  .navbar li {
+    margin: 0px 20px;
+  }
+  .navbar a {
+    padding: 30px 20px;
   }
   /* Adjustments for the main content area */
   main {
-    margin: 20px auto;
     width: 100%;
-    background-color: white;
-    border: 2px solid black;
     /* Adjustments for the top section within the main content area */
     /* Adjustments for the column content within the main content area */
     /* Adjustments for the grid images within the main content area */
     /* Adjustments for the author section */
+    /* Styling for the footer */
   }
   main .topsection {
-    padding: 20px 20px;
+    margin: auto;
+    margin: 0 20px;
   }
-  main .topsection h1,
-  main .topsection h2 {
-    text-align: center;
-  }
-  main .topsection h1 {
-    font-size: 70px;
-  }
-  main .topsection h2 {
-    font-size: 54px;
+  main .topsection .subheader p {
     margin-bottom: 20px;
-  }
-  main .topsection p {
-    font-size: 16px;
   }
   main .columncontent {
-    padding: 20px;
-    -moz-column-count: auto;
-         column-count: auto;
     margin-bottom: 20px;
+    margin: 0 20px;
   }
   main .columncontent h2 {
     margin: 20px auto;
   }
   main .gridimages {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 1fr;
-    grid-template-areas: "top-left" "top-right" "bottom-left" "bottom-right";
     margin-top: 20px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "top-left" "top-right" "bottom-left" "bottom-right";
     /* Adjustments for the img elements within the grid images */
-    /* Specific adjustments for the first img element within the grid images */
-    /* Specific adjustments for the second img element within the grid images */
-    /* Specific adjustments for the third img element within the grid images */
-    /* Specific adjustments for the fourth img element within the grid images */
-    /* Hide the fifth img element within the grid images */
   }
   main .gridimages img {
     width: 100%;
     height: 100%;
   }
-  main .gridimages img:nth-child(1) {
-    grid-area: top-left;
-  }
-  main .gridimages img:nth-child(2) {
-    grid-area: top-right;
-  }
-  main .gridimages img:nth-child(3) {
-    grid-area: bottom-left;
-  }
-  main .gridimages img:nth-child(4) {
-    grid-area: bottom-right;
-  }
-  main .gridimages img:nth-child(5) {
-    display: none;
-  }
   main .author {
     display: flex;
     flex-direction: column-reverse;
-    gap: 20px;
-    text-align: left;
-    width: 100%;
-    /* Adjustments for the h2 elements within the author section */
-    /* Adjustments for the paragraph elements within the author section */
-    /* Adjustments for the img elements within the author section */
+    margin: 20px;
   }
   main .author h2 {
     text-align: center;
@@ -349,109 +318,81 @@ main .gridimages img:nth-child(1) {
     margin-top: 20px;
     text-align: left;
   }
-  main .author img {
-    width: 200px;
+  main .footer {
+    padding: 20px;
   }
 }
-/* Media query for screen widths of 540px and below */
 @media screen and (width <= 540px) {
+  /* Adjustment for the body styling */
+  body {
+    line-height: 1.25;
+  }
   /* Adjustments for the navigation bar */
   .navbar {
-    width: 100vw;
-    justify-content: center;
-    /* Adjustments for the list items within the unordered list */
+    margin-bottom: 12px;
+    /* Styling for the unordered list within the navigation bar */
+    /* Styling for the list items within the unordered list */
+    /* Styling for the anchor tags within the list items */
+  }
+  .navbar ul {
+    margin: 12px auto;
   }
   .navbar li {
-    display: inline;
-    margin: 10px 20px;
-    font-family: "Josefin Sans", serif;
+    margin: 0px 12px;
   }
-  /* Adjustments for the header image */
-  header img {
-    width: 80px;
+  .navbar a {
+    padding: 12px 12px;
   }
   /* Adjustments for the main content area */
   main {
-    margin: 20px auto;
     width: 100%;
-    background-color: white;
-    border: 2px solid black;
+    /* Adjustments for the top section within the main content area */
     /* Adjustments for the column content within the main content area */
     /* Adjustments for the grid images within the main content area */
     /* Adjustments for the author section */
+    /* Styling for the footer */
+  }
+  main .topsection {
+    margin: 12px 12px;
+  }
+  main .topsection h1 {
+    font-size: 3em;
+  }
+  main .topsection .subheader p {
+    font-size: 3em;
+    margin-bottom: 12px;
   }
   main .columncontent {
-    padding: 20px;
-    -moz-column-count: auto;
-         column-count: auto;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
+    margin: 0 12px;
   }
   main .columncontent h2 {
-    margin: 20px auto;
-  }
-  main .gridimages {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 1fr;
-    grid-template-areas: "top-left" "top-right" "bottom-left" "bottom-right";
-    margin-top: 20px;
-    padding: 0;
-    /* Adjustments for the img elements within the grid images */
-    /* Specific adjustments for the first img element within the grid images */
-    /* Specific adjustments for the second img element within the grid images */
-    /* Specific adjustments for the third img element within the grid images */
-    /* Specific adjustments for the fourth img element within the grid images */
-    /* Hide the fifth img element within the grid images */
-  }
-  main .gridimages img {
-    width: 100%;
-    height: 100%;
-  }
-  main .gridimages img:nth-child(1) {
-    grid-area: top-left;
-  }
-  main .gridimages img:nth-child(2) {
-    grid-area: top-right;
-  }
-  main .gridimages img:nth-child(3) {
-    grid-area: bottom-left;
-  }
-  main .gridimages img:nth-child(4) {
-    grid-area: bottom-right;
-  }
-  main .gridimages img:nth-child(5) {
-    display: none;
-  }
-  main .author {
-    display: flex;
-    flex-direction: column-reverse;
-    text-align: left;
-    width: 100%;
-    gap: 0;
-    /* Adjustments for the paragraph elements within the author section */
-    /* Adjustments for the img elements within the author section */
-  }
-  main .author p {
     margin: 12px auto;
   }
-  main .author img {
-    width: 200px;
+  main .gridimages {
+    margin-top: 12px;
+  }
+  main .author {
+    margin: 12px;
+  }
+  main .author h2 {
+    text-align: center;
+  }
+  main .author p {
+    margin-top: 12px;
+  }
+  main .footer {
+    padding: 12px;
   }
 }
 @media screen and (width <= 360px) {
-  .topsection {
-    padding: 0px;
-  }
-  .topsection h1 {
-    font-size: 1em;
-  }
-  .topsection .subheader p {
-    /* Specific style for the subheader within top section content */
-    font-size: 3em;
+  body {
+    line-height: 1.25;
   }
   /* Adjustments for the navigation bar */
   .navbar {
-    width: 100vw;
+    margin-bottom: 10px;
+    margin: 0 auto;
     /* Styling for the unordered list within the navigation bar */
     /* Styling for the list items within the unordered list */
     /* Styling for the anchor tags within the list items */
@@ -464,43 +405,5 @@ main .gridimages img:nth-child(1) {
   }
   .navbar a {
     padding: 0px;
-  }
-  /* Adjustments for the main content area */
-  main {
-    margin: 12px auto;
-    width: 100%;
-    background-color: white;
-    border: 2px solid black;
-    /* Adjustments for the top section within the main content area */
-    /* Adjustments for the grid images within the main content area */
-    /* Adjustments for the author section */
-  }
-  main h1 {
-    font-size: 3em;
-  }
-  main .topsection h1 {
-    font-size: 3em;
-  }
-  main .topsection .subheader p {
-    font-size: 3em;
-    line-height: normal;
-    margin-bottom: 12px;
-  }
-  main .gridimages {
-    margin-top: 12px;
-    padding: 0;
-  }
-  main .author {
-    /* Adjustments for the paragraph elements within the author section */
-    /* Adjustments for the img elements within the author section */
-  }
-  main .author h2 {
-    font-size: 3em;
-  }
-  main .author p {
-    margin: 12px auto;
-  }
-  main .author img {
-    width: 200px;
   }
 }/*# sourceMappingURL=sass.css.map */
