--- a/Task 2/sass.css
+++ b/Task 2/sass.css
@@ -237,24 +237,13 @@ body p {
   }
   /* Adjustments for the grid container */
   .grid {
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 36px;
-    max-width: 900px;
-    margin: 0 auto;
     margin-bottom: 36px;
-  }
-  /* Adjustments for the container content */
-  .containercontent {
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
   }
   /* Adjustments for the first movie container */
   .moviecontainer:nth-child(1) {
     grid-column: span 1;
-    display: grid;
     grid-template-rows: auto 1fr;
     /* Adjustments for the img element within the first movie container */
     /* Adjustments for the container content within the first movie container */
@@ -281,27 +270,23 @@ body p {
   /* Adjustments for the second movie container */
   .moviecontainer:nth-child(2) {
     grid-column: span 1;
-    display: grid;
     grid-template-rows: auto 1fr;
   }
   /* Adjustments for the third movie container */
   .moviecontainer:nth-child(3) {
     grid-column: span 1;
-    display: grid;
     grid-template-rows: auto 1fr;
   }
   /* Adjustments for the fourth movie container */
   .moviecontainer:nth-child(4) {
     grid-column: span 1;
     grid-row-start: 2;
-    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
   }
   .moviecontainer:nth-child(5) {
     grid-column: span 1;
     grid-row-start: 3;
-    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
   }
@@ -309,7 +294,6 @@ body p {
   .moviecontainer:nth-child(6) {
     grid-column: span 1;
     grid-row-start: 3;
-    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
   }
@@ -334,21 +318,18 @@ body p {
   }
   /* Adjustments for the grid container */
   .grid {
-    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, 1fr);
     gap: 16px;
     margin: auto auto;
     margin-bottom: 16px;
-    width: 100%;
   }
   /* Adjustments for the movie container */
   .moviecontainer {
-    border: 2px solid black;
-    box-shadow: 10px 10px 20px;
+    border: 2px solid #4DCCBD;
+    box-shadow: none;
     /* Adjustments for the h1 element within the movie container */
     /* Adjustments for the paragraph element within the movie container */
-    /* Adjustments for the img element within the movie container */
   }
   .moviecontainer h1 {
     font-size: 2em;
@@ -357,83 +338,24 @@ body p {
     font-size: 1.5em;
     margin-bottom: 16px;
   }
-  .moviecontainer img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  /* Adjustments for the container content */
-  .containercontent {
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  /* Adjustments for the watch now button */
-  .watchnow {
-    font-size: 2em;
-    padding: 16px;
-    border-radius: 16px;
-  }
-  /* Adjustments for the first movie container */
-  .moviecontainer:nth-child(1) {
-    grid-column: span 1;
-    display: grid;
-    grid-template-rows: auto 1fr;
-    /* Adjustments for the img element within the first movie container */
-    /* Adjustments for the container content within the first movie container */
-    /* Adjustments for the button within the first movie container */
-    /* Adjustments for the watch button within the first movie container */
-  }
-  .moviecontainer:nth-child(1) img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .moviecontainer:nth-child(1) .containercontent {
-    display: grid;
-  }
-  .moviecontainer:nth-child(1) .containercontent button {
-    font-size: 2em;
-    display: block;
-    width: 100%;
-  }
-  .moviecontainer:nth-child(1) .watch {
-    margin-bottom: 0px;
-  }
   /* Adjustments for the second movie container */
   .moviecontainer:nth-child(2) {
-    grid-column: span 1;
     grid-row-start: 2;
-    display: grid;
   }
   /* Adjustments for the third movie container */
   .moviecontainer:nth-child(3) {
-    grid-column: span 1;
     grid-row-start: 3;
-    display: grid;
   }
   /* Adjustments for the fourth movie container */
   .moviecontainer:nth-child(4) {
-    grid-column: span 1;
     grid-row-start: 4;
-    display: grid;
-    grid-template-columns: 1fr;
   }
   /* Adjustments for the fifth movie container */
   .moviecontainer:nth-child(5) {
-    grid-column: span 1;
     grid-row-start: 5;
-    display: grid;
-    grid-template-columns: 1fr;
   }
   /* Adjustments for the sixth movie container */
   .moviecontainer:nth-child(6) {
-    grid-column: span 1;
     grid-row-start: 6;
-    display: grid;
-    grid-template-columns: 1fr;
   }
 }/*# sourceMappingURL=sass.css.map */
