--- a/Task 2/sass.scss
+++ b/Task 2/sass.scss
@@ -250,7 +250,8 @@ body {
 }
 
 /* Media query for screen widths 1024px and below */
-@media screen and (width <= 1024px) {
+@media screen and (width <=1024px) {
+
     /* Adjustments for the navigation bar */
     .nav {
         margin-bottom: 36px;
@@ -258,26 +259,14 @@ body {
 
     /* Adjustments for the grid container */
     .grid {
-        display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 36px;
-        max-width: 900px;
-        margin: 0 auto;
         margin-bottom: 36px;
-    }
-
-    /* Adjustments for the container content */
-    .containercontent {
-        padding: 16px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
     }
 
     /* Adjustments for the first movie container */
     .moviecontainer:nth-child(1) {
         grid-column: span 1;
-        display: grid;
         grid-template-rows: auto 1fr;
 
         /* Adjustments for the img element within the first movie container */
@@ -308,14 +297,12 @@ body {
     /* Adjustments for the second movie container */
     .moviecontainer:nth-child(2) {
         grid-column: span 1;
-        display: grid;
         grid-template-rows: auto 1fr;
     }
 
     /* Adjustments for the third movie container */
     .moviecontainer:nth-child(3) {
         grid-column: span 1;
-        display: grid;
         grid-template-rows: auto 1fr;
     }
 
@@ -323,7 +310,6 @@ body {
     .moviecontainer:nth-child(4) {
         grid-column: span 1;
         grid-row-start: 2;
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto 1fr;
     }
@@ -331,160 +317,91 @@ body {
     .moviecontainer:nth-child(5) {
         grid-column: span 1;
         grid-row-start: 3;
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto 1fr;
     }
-    
+
     /* Adjustments for the sixth movie container */
     .moviecontainer:nth-child(6) {
         grid-column: span 1;
         grid-row-start: 3;
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto 1fr;
     }
-    
+
     /* Media query for screen widths 720px and below */
-    @media screen and (width <= 720px) {
-    
+    @media screen and (width <=720px) {
+
         /* Adjustments for the navigation bar */
         .nav {
             margin-bottom: 16px;
         }
-    
+
         /* Adjustments for the h1 element within the navigation bar */
         .nav h1 {
             font-size: 2em;
         }
-    
+
         /* Hide the list items within the navigation bar */
         .nav ul li {
             display: none;
         }
-    
+
         /* Adjustments for the search button */
         .search {
             font-size: 2em;
         }
-    
+
         /* Adjustments for the grid container */
         .grid {
-            display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: repeat(6, 1fr);
             gap: 16px;
             margin: auto auto;
             margin-bottom: 16px;
-            width: 100%;
         }
-    
+
         /* Adjustments for the movie container */
         .moviecontainer {
-            border: 2px solid black;
-            box-shadow: 10px 10px 20px;
-    
+            border: 2px solid $lightblue;
+            box-shadow: none;
+
             /* Adjustments for the h1 element within the movie container */
             h1 {
                 font-size: 2em;
             }
-    
+
             /* Adjustments for the paragraph element within the movie container */
             p {
                 font-size: 1.5em;
                 margin-bottom: 16px;
             }
-    
-            /* Adjustments for the img element within the movie container */
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
+            
         }
-    
-        /* Adjustments for the container content */
-        .containercontent {
-            padding: 16px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-    
-        /* Adjustments for the watch now button */
-        .watchnow {
-            font-size: 2em;
-            padding: 16px;
-            border-radius: 16px;
-        }
-    
-        /* Adjustments for the first movie container */
-        .moviecontainer:nth-child(1) {
-            grid-column: span 1;
-            display: grid;
-            grid-template-rows: auto 1fr;
-    
-            /* Adjustments for the img element within the first movie container */
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-    
-            /* Adjustments for the container content within the first movie container */
-            .containercontent {
-                display: grid;
-            }
-    
-            /* Adjustments for the button within the first movie container */
-            .containercontent button {
-                font-size: 2em;
-                display: block;
-                width: 100%;
-            }
-    
-            /* Adjustments for the watch button within the first movie container */
-            .watch {
-                margin-bottom: 0px;
-            }
-        }
-    
+
         /* Adjustments for the second movie container */
         .moviecontainer:nth-child(2) {
-            grid-column: span 1;
             grid-row-start: 2;
-            display: grid;
         }
-    
+
         /* Adjustments for the third movie container */
         .moviecontainer:nth-child(3) {
-            grid-column: span 1;
             grid-row-start: 3;
-            display: grid;
         }
-    
+
         /* Adjustments for the fourth movie container */
         .moviecontainer:nth-child(4) {
-            grid-column: span 1;
             grid-row-start: 4;
-            display: grid;
-            grid-template-columns: 1fr;
         }
-    
+
         /* Adjustments for the fifth movie container */
         .moviecontainer:nth-child(5) {
-            grid-column: span 1;
             grid-row-start: 5;
-            display: grid;
-            grid-template-columns: 1fr;
         }
-    
+
         /* Adjustments for the sixth movie container */
         .moviecontainer:nth-child(6) {
-            grid-column: span 1;
             grid-row-start: 6;
-            display: grid;
-            grid-template-columns: 1fr;
         }
     }
 }
