--- a/Task 1/sass.scss
+++ b/Task 1/sass.scss
@@ -310,7 +310,7 @@ main {
 
     /* Adjustments for the navigation bar */
     .navbar {
-
+        width: 100%;
         /* Styling for the unordered list within the navigation bar */
         ul {
             margin: 20px auto;
