--- a/Task 1/sass.css
+++ b/Task 1/sass.css
@@ -253,6 +253,9 @@ main .gridimages img:nth-child(1) {
   }
 }
 @media screen and (width <= 720px) {
+  body {
+    line-height: 1.5;
+  }
   /* Adjustments for the navigation bar */
   .navbar {
     width: 100%;
