--- a/Task 1/sass.scss
+++ b/Task 1/sass.scss
@@ -301,6 +301,9 @@ main {
 }
 
 @media screen and (width <=720px) {
+    body {
+        line-height: 1.5;
+    }
 
     /* Adjustments for the navigation bar */
     .navbar {
