--- a/Class Activities/Weltons Chocolate/style.css
+++ b/Class Activities/Weltons Chocolate/style.css
@@ -164,7 +164,7 @@ header {
     font-size: 96px;
     margin-bottom: 10px;
     background: linear-gradient(orangered, goldenrod, white, gold, goldenrod, orangered);
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 2px 2px 150px goldenrod;
 }
@@ -437,6 +437,7 @@ header {
 
 .signup {
     margin: auto;
+    margin-top: 50px;
     background-color: black;
     padding: 40px;    
     display: grid;
@@ -458,11 +459,14 @@ header {
     font-size: 72px;
     margin-bottom: 10px;
     color:#dc2c2b;
+    font-family: "Montserrat", sans-serif;
 }
 
 .signup p {
-    font-size: 48px;
+    font-size: 32px;
     color: white;
+    font-family: "Montserrat", sans-serif;
+    margin-bottom: 40px;
 }
 
 .signup form {
@@ -474,6 +478,7 @@ header {
 .signup label {
     font-size: 24px;
     margin-bottom: 10px;
+    font-family: "Montserrat", sans-serif;
     color:#b22222;
 }
 
@@ -495,6 +500,7 @@ header {
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-family: "Montserrat", sans-serif;
 }
 
 .signup button:hover {
